--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 accelerate==0.30.1
 aiohttp==3.9.5
 aiosignal==1.3.1
+appnope==0.1.4
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.2.0
@@ -36,17 +37,6 @@ multiprocess==0.70.16
 nest-asyncio==1.6.0
 networkx==3.2.1
 numpy==1.26.4
-nvidia-cublas-cu11==11.11.3.6; platform_system == 'Windows'
-nvidia-cuda-cupti-cu11==11.8.87; platform_system == 'Windows'
-nvidia-cuda-nvrtc-cu11==11.8.89; platform_system == 'Windows'
-nvidia-cuda-runtime-cu11==11.8.89; platform_system == 'Windows'
-nvidia-cudnn-cu11==8.7.0.84; platform_system == 'Windows'
-nvidia-cufft-cu11==10.9.0.58; platform_system == 'Windows'
-nvidia-curand-cu11==10.3.0.86; platform_system == 'Windows'
-nvidia-cusolver-cu11==11.4.1.48; platform_system == 'Windows'
-nvidia-cusparse-cu11==11.7.5.86; platform_system == 'Windows'
-nvidia-nccl-cu11==2.20.5; platform_system == 'Windows'
-nvidia-nvtx-cu11==11.8.86; platform_system == 'Windows'
 packaging==24.0
 pandas==2.2.2
 parso==0.8.4
@@ -74,14 +64,11 @@ stack-data==0.6.3
 sympy==1.12
 threadpoolctl==3.5.0
 tokenizers==0.19.1
-torch==2.3.0+cu118; platform_system == 'Windows'
-torchaudio==2.3.0+cu118; platform_system == 'Windows'
-torchvision==0.18.0+cu118; platform_system == 'Windows'
+torch==2.3.0
 tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.3
 transformers==4.40.2
-triton==2.3.0; platform_system == 'Windows'
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
